# RiskScore

./: .gitignore
gerald_bnpl_assets/gerald_bnpl_assets/: Makefile  docker-compose.yml
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/: .env.example  ARCHITECTURE.md  Dockerfile  QUICKSTART.md  README.md  pyproject.toml
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/: __init__.py  config.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/api/: dependencies.py  main.py  middleware.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/api/v1/: decision.py  history.py  plan.py  schemas.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/domain/: exceptions.py  installments.py  models.py  scoring.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/infrastructure/clients/: bank.py  ledger.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/infrastructure/database/: models.py  repositories.py  session.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/gerald_gateway/utils/: date_utils.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/scripts/: quickstart.sh
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/tests/: conftest.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/tests/e2e/: test_user_personas.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/tests/integration/: test_api.py
gerald_bnpl_assets/gerald_bnpl_assets/gerald-gateway/tests/unit/: test_installments.py  test_scoring.py
(+5 files in other folders)
